fix: bad substituion of tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Debug version
         id: Debug
-        run: echo ${steps.get_version.outputs.VERSION}
+        run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
@@ -19,4 +19,4 @@ jobs:
           username: lakhansamani
           key: ${{ secrets.GCP_PRIVATE_KEY }}
           port: 22
-          script: /bin/sh deploy.sh ${steps.get_version.outputs.VERSION}
+          script: /bin/sh deploy.sh ${{ steps.get_version.outputs.VERSION }}
