--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on:
   release:
-    types: [released]
+    types: [published]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
